# cco-generator

./: CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
cco-core/: README.md  pyproject.toml
cco-core/tests/unit/: test_sanity.py
cco-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
cco-frontend/src/: App.test.tsx  App.tsx
cco-service/: Dockerfile  README.md  pyproject.toml
cco-service/src/cco_service/: main.py
cco-service/tests/: test_sanity.py
docs/: ADR-001-Architecture.md  requirements.md
examples/: README.md  gommaps_input.json  gommaps_output.json
