[project]
name = "cco-service"
version = "0.1.0"
description = "FastAPI service wrapper for CCO generation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "redis>=7.0.0",
    "python-multipart>=0.0.21",  # For file uploads
    "cco-core"                  # DIRECT REFERENCE to the core library
]

# Tell build tools where to find the sibling package locally
[tool.uv.sources]
cco-core = { path = "../cco-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13"
]
